// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderHtmlPage SPA mode 1`] = `
"<!doctype html><div id=\\"static-html-page\\" data-props=\\"{
  \\"rawAppHtml\\": \\"<div data-reactroot=\\\\\\"\\\\\\">Mock component</div>\\",
  \\"htmlAttributes\\": \\"htmlAttributes.mockToComponent\\",
  \\"bodyAttributes\\": \\"bodyAttributes.mockToComponent\\",
  \\"appendToHead\\": [
    \\"title.mockToString\\",
    \\"base.mockToString\\",
    \\"meta.mockToString\\",
    \\"link.mockToString\\",
    \\"inline-js-scripts\\",
    \\"script.mockToString\\",
    \\"<!-- INLINE CSS HERE, BATFISH -->\\",
    \\"css\\",
    \\"style.mockToString\\"
  ],
  \\"appendToBody\\": [
    \\"append\\",
    \\"to\\",
    \\"body\\"
  ]
}\\"></div>"
`;

exports[`renderHtmlPage gives us what we want 1`] = `
"<!doctype html><div id=\\"static-html-page\\" data-props=\\"{
  \\"rawAppHtml\\": \\"<div id=\\\\\\"application-wrapper\\\\\\" data-reactroot=\\\\\\"\\\\\\">{}<div id=\\\\\\"router\\\\\\" data-props=\\\\\\"{\\\\n  &quot;startingPath&quot;: &quot;/mock/route/path/&quot;,\\\\n  &quot;startingProps&quot;: &quot;mockPageModule.props&quot;\\\\n}\\\\\\"></div></div>\\",
  \\"htmlAttributes\\": \\"htmlAttributes.mockToComponent\\",
  \\"bodyAttributes\\": \\"bodyAttributes.mockToComponent\\",
  \\"appendToHead\\": [
    \\"title.mockToString\\",
    \\"base.mockToString\\",
    \\"meta.mockToString\\",
    \\"link.mockToString\\",
    \\"inline-js-scripts\\",
    \\"script.mockToString\\",
    \\"<!-- INLINE CSS HERE, BATFISH -->\\",
    \\"css\\",
    \\"style.mockToString\\"
  ],
  \\"appendToBody\\": [
    \\"append\\",
    \\"to\\",
    \\"body\\"
  ]
}\\"></div>"
`;
